# jkengine

./: CMakeLists.txt  README.md  build-performance.sh  build.sh  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/Graphics/: CMakeLists.txt  Color.cpp  Color.h  Graphics.h  ICamera2d.h  IEngine.h  ILibPngWrapper.h  IObject2d.h  IObjectInstance2d.h  IScreenshot.h  ISprite.h  ISpriteInstance.h  ITileAtlas.h  ITileMap.h  IWindow.h  Pixel.h
src/Graphics/OpenGL/: Camera2d.h  Engine.cpp  Engine.h  IOpenGLWrapper.h  IShader.h  Object2d.cpp  Object2d.h  ObjectInstance2d.cpp  ObjectInstance2d.h  OpenGLWrapper.h  Registry.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.h  SpriteDrawer.h  SpriteInstance.h  SpriteShaderProgram.cpp  SpriteShaderProgram.h  Texture.cpp  Texture.h  TileAtlas.cpp  TileAtlas.h  TileMap.cpp  TileMap.h  TileMapDrawer.h  TileMapShaderProgram.cpp  TileMapShaderProgram.h  UniqueHandle.h  UnitQuadVertexArray.cpp  VertexArray.h  ViewportCapture.cpp  ViewportCapture.h  Window.cpp  Window.h
src/Graphics/include/JkEng/Graphics/: AfterBuildPtr.h  Color.h  GridLocation.h  ICamera2d.h  IObject2d.h  ISprite.h  LibPngWrapper.h  SceneDefinition.h  SpriteDefinition.h  TileAtlasDefinition.h  TileMapDefinition.h
src/Graphics/include/JkEng/Graphics/OpenGL/: Engine.h  IShader.h  OpenGLWrapper.h  Scene.h  Shader.h  ShaderProgram.h  Sprite.h  TileMap.h  TileMapShaderProgram.h  UnitQuadVertexArray.h  (+2 more)
src/Graphics/include/jkengine/Graphics/: AfterBuildPtr.h  Color.h  Graphics.h  GridLocation.h  ICamera2d.h  IEngine.h  IImage.h  IObject2d.h  IScene.h  ITileAtlas.h  ITileMap.h  SceneDefinition.h  SpriteDefinition.h  TileAtlasDefinition.h  TileMapDefinition.h
src/Graphics/src/OpenGL/: Engine.cpp  Object2d.cpp  OpenGLHelpers.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  SpriteShaderProgram.cpp  Texture.cpp  TileAtlas.cpp  TileMapShaderProgram.cpp  UnitQuadVertexArray.cpp  ViewportCapture.cpp
src/GraphicsIntegrationTests/: CMakeLists.txt  ColorTiles4x4.h  PngImageTests.cpp  ScreenSampleHelpers.h  SpriteTests.cpp  TileMapTests.cpp
src/GraphicsIntegrationTests/OpenGL/: ShaderProgramTests.cpp  ShaderTests.cpp  TestHelpers.cpp  TextureTests.cpp  VertexArrayTests.cpp
src/GraphicsIntegrationTests/Window/: WindowTests.cpp
src/GraphicsUnitTests/: CMakeLists.txt  FakeImage.h  MockLibPngWrapper.h  PngImageTests.cpp
src/GraphicsUnitTests/OpenGL/: MockOpenGLWrapper.h  MockShader.h  Object2dTests.cpp  ObjectInstance2dTests.cpp  ShaderProgramTests.cpp  ShaderTests.cpp  TextureTests.cpp  VertexArrayTests.cpp  WindowTests.cpp
src/GraphicsUnitTests/Window/: MockGlfwWrapper.h  WindowTests.cpp
src/Input/: CMakeLists.txt  IEngine.h  Input.h
src/Input/Glfw/: Engine.cpp  Engine.h  Gamepad.cpp  Gamepad.h
src/Input/include/JkEng/Input/: IEngine.h
src/Input/include/jkengine/Input/: IGamepad.h
src/Input/src/Glfw/: Engine.cpp  Gamepad.cpp
src/InputUnitTests/: CMakeLists.txt
src/InputUnitTests/Glfw/: EngineTests.cpp  FakeGlfwInputWindow.h  GamepadTests.cpp  MockGlfwInputWrapper.h
src/JkEng/: CMakeLists.txt
src/JkEng.Graphics/: CMakeLists.txt
src/JkEng.Graphics.IntegrationTests/: CMakeLists.txt  SpriteTests.cpp  TileMapTests.cpp
src/JkEng.Graphics.IntegrationTests/OpenGL/: ShaderTests.cpp  VertexArrayTests.cpp
src/JkEng.Graphics.IntegrationTests/Window/: WindowTests.cpp
src/JkEng.Graphics.UnitTests/: AnimationTests.cpp  CMakeLists.txt  MockSprite.h  PngImageTests.cpp  SpriteAnimatorTests.cpp  TestHelpers.h  TileAtlasDefinitionTests.cpp
src/JkEng.Graphics.UnitTests/OpenGL/: MockOpenGLWrapper.h  MockShader.h  Object2dTests.cpp  ShaderProgramTests.cpp  VertexArrayTests.cpp
src/JkEng.Graphics/include/JkEng/Graphics/: Animation.h  Color.h  GridLocation.h  ICamera2d.h  IEngine.h  IImage.h  ILibPngWrapper.h  IObject2d.h  IScene.h  IScreenshot.h  ITileMap.h  PngImage.h  SpriteAnimator.h  TileAtlasDefinition.h  TileMapDefinition.h
src/JkEng.Graphics/src/: Animation.cpp  Color.cpp  PngImage.cpp  SpriteAnimator.cpp
src/JkEng.Graphics/src/OpenGL/: Object2d.cpp  OpenGLHelpers.cpp  Shader.cpp  ShaderProgram.cpp  SpriteShaderProgram.cpp  Texture.cpp  TileAtlas.cpp  TileMapShaderProgram.cpp  UnitQuadVertexArray.cpp
src/JkEng.Input/: CMakeLists.txt
src/JkEng.Input.UnitTests/: CMakeLists.txt
src/JkEng.Input.UnitTests/Glfw/: EngineTests.cpp  MockGlfwInputWrapper.h
src/JkEng.Input/include/JkEng/Input/: IGamepad.h
src/JkEng.Input/src/Glfw/: Gamepad.cpp
src/JkEng.Physics/: CMakeLists.txt
src/JkEng.Physics.PerformanceTests/: CMakeLists.txt  MovableAabb2dTests.cpp
src/JkEng.Physics.UnitTests/: AabbTests.cpp  CMakeLists.txt  EngineTests.cpp
src/JkEng.Physics/include/JkEng/Physics/: Engine.h  IMovableAabb2d.h  IReadOnlyAabb2d.h  IScene.h  MovableAabb2dDefinition.h  SceneDefinition.h
src/JkEng.Physics/src/: Aabb.cpp  Aabb.h  Engine.cpp  Scene.cpp  Scene.h  SnapshotOfReadOnlyAabb2d.h
src/JkEng.UnitTests/: CMakeLists.txt  DistinctObjectPairTracker.h  DistinctObjectPairTrackerTests.cpp
src/JkEng.Window/: CMakeLists.txt
src/JkEng.Window/include/JkEng/Window/: GlfwException.h  GlfwWrapper.h  IGlfwInputWindow.h  IGlfwWrapper.h  IOpenGLWindow.h
src/JkEng.Window/src/: GlfwException.cpp  GlfwWindow.cpp
src/JkEng/include/JkEng/: AfterBuildPtr.h  AfterCreatePtr.h
src/JkEngUnitTests/: AfterBuildPtrTests.cpp  AfterCreatePtrTests.cpp  CMakeLists.txt
src/Shared/: CMakeLists.txt
src/Shared/include/Shared/: Registry.h
src/Shared/include/jkengine/Shared/: Pool.h  Pool2.h  Pool3.h  Registry.h
src/SharedPerformanceTests/: CMakeLists.txt  PoolTests.cpp
src/SharedUnitTests/: CMakeLists.txt  PoolTests.cpp  RegistryTests.cpp
src/Window/: CMakeLists.txt  GlfwWindow.cpp  GlfwWindow.h  GlfwWrapper.cpp  GlfwWrapper.h  IGlfwInputWindow.h  IOpenGLWindow.h
src/Window/include/JkEng/Window/: GlfwWindow.h  IGlfwInputWrapper.h
src/Window/include/Window/: GlfwException.h  GlfwWrapper.h  IGlfwWrapper.h
src/Window/include/jkengine/Window/: GlfwWindow.h  IGlfwInputWindow.h  IGlfwInputWrapper.h
src/Window/src/: GlfwException.cpp  GlfwWindow.cpp  GlfwWrapper.cpp
(+30 files in other folders)
