add_subdirectory(Graphics)
if(BUILD_TESTING)
  add_subdirectory(GraphicsUnitTests)
  add_subdirectory(GraphicsIntegrationTests)
endif()
add_subdirectory(Input)
if(BUILD_TESTING)
  add_subdirectory(InputUnitTests)
endif()
add_subdirectory(Shared)
if(BUILD_TESTING)
  add_subdirectory(SharedUnitTests)
endif()
add_subdirectory(Window)
