add_library(Graphics STATIC)
if(MSVC)
  target_compile_options(Graphics PRIVATE /W4 /WX)
else()
  target_compile_options(Graphics PRIVATE -Wall -Wextra -pedantic -Werror)
endif()
target_sources(Graphics
  PRIVATE
    Color.h
    Color.cpp
    Graphics.h
    GridLocation.h
    ICamera2d.h
    IEngine.h
    IImage.h
    IObject2d.h
    PngImage.h
    PngImage.cpp
    ILibPngWrapper.h
    LibPngWrapper.h
    IScreenshot.h
    ISprite.h
    ITileAtlas.h
    ITileMap.h
    OpenGL/Camera2d.h
    OpenGL/Engine.h
    OpenGL/Engine.cpp
    OpenGL/Object2d.h
    OpenGL/Object2d.cpp
    OpenGL/OpenGLHelpers.h
    OpenGL/OpenGLHelpers.cpp
    OpenGL/IOpenGLWrapper.h
    OpenGL/OpenGLWrapper.h
    OpenGL/Registry.h
    OpenGL/IShader.h
    OpenGL/Shader.h
    OpenGL/Shader.cpp
    OpenGL/ShaderProgram.h
    OpenGL/ShaderProgram.cpp
    OpenGL/Simple3dVertex.h
    OpenGL/SpriteDrawer.h
    OpenGL/SpriteShaderProgram.h
    OpenGL/SpriteShaderProgram.cpp
    OpenGL/Texture.h
    OpenGL/Texture.cpp
    OpenGL/TileAtlas.h
    OpenGL/TileAtlas.cpp
    OpenGL/TileMapDrawer.h
    OpenGL/TileMap.h
    OpenGL/TileMapShaderProgram.h
    OpenGL/TileMapShaderProgram.cpp
    OpenGL/UnitQuadVertexArray.h
    OpenGL/UnitQuadVertexArray.cpp
    OpenGL/VertexArray.h
    OpenGL/ViewportCapture.h
    OpenGL/ViewportCapture.cpp
)
target_link_libraries(Graphics Window ${CONAN_LIBS})
